infra/keda/keda-dynatrace-springboot-micrometer-demo/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
    metrics.dynatrace.com/port: '8080'
    metrics.dynatrace.com/scrape: 'true'
    metrics.dynatrace.com/secure: 'true'
    metrics.dynatrace.com/path: '/actuator/prometheus'
  labels:
    app: demo-product-svc
  name: demo-product-svc
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo-product-svc
  sessionAffinity: None
  type: ClusterIP
